<resources>
    <string name="app_name">Quizes About Countries</string>
    <string name="quiz1">1- Where are these pyramids located?</string>
    <string name="egyptAnswer">Egypt</string>
    <string name="spainAnswer">spain</string>
    <string name="brazilAnswer">Brazil</string>
    <string name="bahrainAnswer">Bahrain</string>
    <string name="quiz2">In which city is Burj Khalifa located?</string>
    <string name="dubaiAnswer">Dubai</string>
    <string name="sharjahAnswer">Sharjah</string>
    <string name="alainAnswer">Al Ain</string>
    <string name="ajmanAnswer">Ajman</string>
    <string name="quiz3">Where is the city of Petra?</string>
    <string name="uaeAnswer">UAE</string>
    <string name="jordanAnswer">Jordan</string>
    <string name="germanyAnswer">Germany</string>
    <string name="italyAnswer">Italy</string>
    <string name="quiz4">In any city is the Statue of Liberty in America?</string>
    <string name="washingtonAnswer">Washington</string>
    <string name="floridaAnswer">Florida</string>
    <string name="ohioAnswer">Ohio</string>
    <string name="newyorkAnswer">New York</string>
    <string name="quiz5">Any of these countries is located on the continent of Africa?</string>
    <string name="brazil2Answer">Brazil</string>
    <string name="cyprusAnswer">Cyprus</string>
    <string name="americaAnswer">America</string>
    <string name="chinaAnswer">China</string>
    <string name="quiz6">Where is Red Square in Russia?</string>
    <string name="moscowAnswer">Moscow</string>
    <string name="stpetersburgAnswer">St Petersburg</string>
    <string name="kazanAnswer">Kazan</string>
    <string name="permAnswer">Perm</string>
    <string name="guideForUser">Click Here on Congratulations</string>
    <string name="congrateBtn">congratulations</string>
    <string name="failedResult">Unfortunately, you lost because you did not complete the test with 6 points</string>
    <string name="EnterEditText">Enter correct Answer</string>
    <string name="answer">Answer:</string>
    <string name="egypt2Answer">Egypt</string>
    <string name="ghanaAnswer">Ghana</string>
    <string name="tunisiaAnswer">Tunisia</string>
    <string name="checkbox_result">CheckBox Result</string>
</resources>