<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layoutMarginSize"
        android:orientation="vertical">

        <TextView
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz2"
            android:textSize="@dimen/TitleTextSize" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/ImageViewHeightSize"
            android:src="@drawable/burjkalifa" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textColor="#000000"
            android:textSize="@dimen/textSizeChoose" />

        <EditText
            android:id="@+id/Answer1Id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_layout_height1"
            android:layout_marginBottom="@dimen/editText_layout_height1"
            android:hint="@string/EnterEditText"
            android:inputType="text"
            android:onClick="Answer1onClick"
            android:textSize="@dimen/textSizeChoose"
            tools:ignore="OnClick" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/nextPageButtonSize"
            android:background="@color/backgroundOfIntent"
            android:onClick="nextB"
            android:elevation="10dp"
            android:src="@android:drawable/ic_media_ff"
            tools:ignore="OnClick" />
    </LinearLayout>

</ScrollView>